# mypy-rs

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  mypy_self_check.ini  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: docs.yml  native-kernel-parity.yml  pr-gate.yml  test.yml
crates/ast_serialize/: Cargo.toml
crates/ast_serialize/src/: lib.rs
crates/fs_cache/: Cargo.toml
crates/fs_cache/src/: lib.rs
crates/fs_probe/: Cargo.toml
crates/fs_probe/src/: lib.rs
crates/module_resolver/: Cargo.toml
crates/module_resolver/src/: fs_cache.rs  lib.rs
crates/type_kernel/: Cargo.toml
crates/type_kernel/src/: aliases.rs  argmap.rs  checkexpr_functions.rs  erase.rs  erase_typevars.rs  expandtype.rs  lib.rs  lkv.rs  mro.rs  operators.rs  refs.rs  setops.rs  subtypes.rs  typeinfo.rs  typeops.rs  visitor.rs  wire.rs
docs/: README.md  rust-migration-strangler.md
docs/source/: existing_code.rst
mypy/: argmap.py  build.py  checker.py  checkexpr.py  copytype.py  dmypy_server.py  erasetype.py  expandtype.py  fscache.py  join.py  main.py  meet.py  modulefinder.py  mro.py  native_resolve.py  nativeparse.py  nodes.py  operators.py  options.py  parse.py  subtypes.py  typeops.py  types.py
mypy/test/: conftest.py  test_nativeparse.py  testcheck.py  testdaemon.py  testinfer.py  testmodulefinder.py  testsubtypes.py  testtypes.py
script/: __init__.py
scripts/: bench_parser.py  bench_resolver.py  diff_checkers.py
stubs/: fs_cache.pyi  module_resolver.pyi  type_kernel.pyi
