[package]
name = "mypy-ast-serialize"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "ast_serialize"
crate-type = ["cdylib", "rlib"]

[features]
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.20.2", features = ["abi3-py37"] }
rustpython-parser = "0.4.0"
sha2 = "0.10"
