[package]
name = "mypy-ast-serialize"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "ast_serialize"
crate-type = ["cdylib", "rlib"]

[features]
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.20.2", features = ["abi3-py37"] }
ruff_python_ast = "0.0.3"
ruff_python_parser = "0.0.3"
ruff_text_size = "0.0.3"
sha2 = "0.10"
